# autosim

./: .gitignore  README.md  __init__.py  abaqus_simulation_main.inp  base_template.inp  check_run1_simulations.sh  init.sh  main.py  pyproject.toml  pyproject_backup.toml  quality.sh  run1_abaqus.sh  run_abaqus_simulation_main.sh  run_abaqus_simulation_main_postproc.sh  ssm.md  style.sh  submit_job_sge.sh
.github/workflows/: Python.yml
abaqus_inp_files/: assembly.inp  loads.inp  material_csf.inp  material_csf_neohookean.inp  material_csf_ogden.inp  material_csf_shear.inp  material_graymatter.inp  material_graymatter_neohookean.inp  material_skull.inp  material_whitematter.inp  step_case1.inp
postproc/: abaqusMacros_fig.py  contour_visualization.py  extract_data_all.py  extract_data_strain_vs_strain_rate.py  plot_cloud.py  plot_percentiles.py  plot_percentiles_all.py  strain_rate_vs_strain.py
recipes/: IXI012-HH-1211-T1_large.yml
simulation_results/example1/: abaqus_simulation_main.inp
src/autosim/ssm/: README.md  mesh_to_sim.py  seg_to_mesh.py  segmentation_to_mesh.py  segmentation_to_mesh_emma.py  ssm_input_template.i  submit_script_template.sh
ssm/: README.md  center_of_geometry.py  letter_f.inp  letter_f.npy  seg_to_mesh.py  style.sh  test_center_of_geometry.py
tests/: test_center_of_geometry.py  test_segmentation_to_mesh.py
tests/input/: double.inp  double.npy  double_emma_spec.inp  double_intermediate.inp  double_proposed_to_emma.inp  double_proposed_to_emma_002.inp
