[project]
name = "autosim"
version = "0.1.0"
authors = [
  { name="Rika Carlsen", email="carlsen@rmu.edu" },
  { name="Chad Hovey", email="chovey@sandia.gov" },
  { name="Emma Lejeune", email="elejeune@bu.edu" },
  { name="Anu Tripathy", email="tripathia@rmu.edu" },
]
description = "autotwin workflow for simulation"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0.2",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]

[tool.ruff]
line-length = 79
